 
[v1.1.2p14b]
- Bugfix: ScreenDockStation no longer tries to read data that does not exist in the layout-file
- Bugfix: ScreenDockStation writes more data into the layout-file

[v1.1.2p14c]
- Bugfix: Found by Ti: reading the "area" of a CommonSingleDockable from an xml file failed, because CommonSingleDockableFactory was reading the wrong tag.
- Bugfix: the FocusHistory now also returns those Dockables that never had the focus. These Dockable are ordered by their registration. This fixes an issue where CControl was unable to focus a dockable if the user did not yet interact with the application.

[v1.1.2p14d]
- Bugfix: Glass-EclipseThemeExtension will no longer register a title as "set by the client", instead is register a title as "set by the theme". This will allow the framework to remove the title if the theme is switched.
! API: Rendering-hints of the operating system will be better respected when painting titles and taps (see DockRenderingHints).

[v1.1.2p14e]
- Bugfix: Externalizing some stacked CDockables that were part of a CWorkingArea did result in an exception, because the CExternalizedMode did enforce the working-area restriction as soon as there was a StackDockStation between CDockables and ScreenDockStation.
- Bugfix: normalizing a stack of CDockables did not put the stack at its old location if the stack was a child of a CWorkingArea. This was caused by the class "Placeholder" being unable to handle anything put "placeholder-properties".
- Bugfix: If DockableSelector receives a KeyEvent that opens its dialog, and the dialog is already open, just keep the dialog open. Don't close and reopen the dialog, because that only irritates the user.

[v1.1.2p14]
- Bugfix: "Shrinking" big children of a ToolbarDockStation resulted in a NullPointerException
- Bugfix: Various bugs that prevented a user from dragging a toolbar-item to the screen