@@ -1075,3 +1075,4 @@
 [v1.1.2p14]
 - Bugfix: "Shrinking" big children of a ToolbarDockStation resulted in a NullPointerException
 - Bugfix: Various bugs that prevented a user from dragging a toolbar-item to the screen
+- API: A DockTitleFactory with priority "CLIENT" now overrides a DockTitleFactory that was loaded through an Extension  
